# misis2023f-22-3-filatov-i-a

./: .build.bat  CMakeLists.txt  codeforces.id.txt  status.md
prj.codeforces/: 1283a.cpp  1369a.cpp  1426a.cpp  1520b.cpp  1622a.cpp  1622b.cpp  1729b.cpp  1823b.cpp  1843c.cpp  1851a.cpp  1872B.cpp  1873B.cpp  1878b.cpp  1884b.cpp  1913b.cpp  1915d.cpp  231A.cpp  266b.cpp  520a.cpp  791a.cpp  CMakeLists.txt
prj.cw/: .gitignore  CMakeLists.txt  ConsoleApplication5.sln  Mesh.h  camera.h  model.h  shader.txt  vcpkg.json
prj.cw/ConsoleApplication5/: ConsoleApplication5.cpp  ConsoleApplication5.vcxproj
prj.cw/ConsoleApplication5/x64/Debug/: ConsoleApplication5.exe.recipe  ConsoleApplication5.ilk  ConsoleApplication5.vcxproj.FileListAbsolute.txt  vc143.idb
prj.cw/ConsoleApplication5/x64/Debug/ConsoleA.8f6e5fa7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication5.lastbuildstate  ConsoleApplication5.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj.cw/imgui/: ImFileBrowser.h
prj.cw/main/: main.cpp  morph.cpp  morph.hpp
