set(CMAKE_CXX_STANDARD 20)

add_executable(231a 231a.cpp)
add_executable(266b 266b.cpp)
add_executable(520a 520a.cpp)
add_executable(791a 791a.cpp)
add_executable(1283a 1283a.cpp)
add_executable(1369a 1369a.cpp)
add_executable(1426a 1426a.cpp)
add_executable(1520b 1520b.cpp)
add_executable(1622a 1622a.cpp)
add_executable(1622b 1622b.cpp)
add_executable(1690b 1690b.cpp)
add_executable(1729b 1729b.cpp)
add_executable(1823b 1823b.cpp)
add_executable(1843c 1843c.cpp)
add_executable(1851a 1851a.cpp)
add_executable(1872b 1872b.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1878b 1878b.cpp)
add_executable(1884b 1884b.cpp)
add_executable(1913b 1913b.cpp)
add_executable(1915d 1915d.cpp)